# Hexen-Witz-Benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOW_TO_USE.md  LICENSE  README.md  TECHNICAL_SPEC.md  pyproject.toml
.github/workflows/: ci.yml
boto3/: __init__.py
src/: cli.py  config.py  extractor.py  generator.py  judge.py  main.py  models.py  router_client.py
src/analytics/: __init__.py  dashboard.py  visualize.py
src/prompts/: benchmark_prompt.md  judge_checklist.md
src/storage/: __init__.py  database.py  files.py
structlog/: __init__.py
tests/: test_cli.py  test_extractor.py  test_generator.py  test_judge.py  test_main.py  test_models.py  test_router_client.py
tests/analytics/: __init__.py  test_dashboard.py  test_visualize.py
tests/storage/: __init__.py  test_database.py  test_files.py
